--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,10 +12,8 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
-      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
-      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
-      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <p> This project involves Augmented reality without the use of markers. An image of an advert & video 
+      can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -31,8 +29,7 @@
     </ul>
     <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
         As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
-These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure.
-</p>
+      These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure. </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -46,10 +43,8 @@ These measures are then combined to create a weight map used to blend each of th
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
-      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
-      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
-      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <p> Object tracking was performed using the Particle Filter algorithm. For robustness,
+    higher level motion dynamics can be incorporated in the algorithmic formulation.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -63,10 +58,8 @@ These measures are then combined to create a weight map used to blend each of th
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
-      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
-      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
-      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <p> The Kalman filter algorithm is used to track a Pedestrian using a template sample.
+    The same algorithm works well when HOG features are used.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -81,7 +74,7 @@ These measures are then combined to create a weight map used to blend each of th
       <li> Python, OpenCV </li>
     </ul>
     <p> The objective of this project is to showcase different indicators used in the stock market for trading
-     decisions Bollinger bands %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
+     decisions Bollinger bands, %b, Relative Strength Index, and Moving Average Convergence Divergence.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -97,7 +90,7 @@ These measures are then combined to create a weight map used to blend each of th
     </ul>
     <p> This Portfolio simulator builds the performance of the portolio for a given stock and market data.
         It receives an "Orders" file containing actions: "BUY", "SELL", Symbol of the stock, Dates, and 
-      Starting value. Given these configuration parameters, the simulator builds the portolio returns</p>
+      Starting value. The simulator then builds the portolio returns</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -111,9 +104,9 @@ These measures are then combined to create a weight map used to blend each of th
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> Face detection was performed as described in the Viola Jones algorithm. It combines the
-    use of Haar features and Boosting. Haar features creates a representation for human faces
-    while Boosting enhances the performance of the learner by concentrating on harder samples.</p>
+    <p> Face detection was performed as described in the Viola-Jonespaper. Haar features create
+      representations for human faces while Boosting enhances the performance of the learner 
+      by concentrating on difficult samples.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -128,8 +121,8 @@ These measures are then combined to create a weight map used to blend each of th
       <li> Python, OpenCV </li>
     </ul>
     <p> This project performs motion detection using the Lucas Kanade (LK) algorithm which is based on 
-      the brightness constancy equation. It is assumed that objects move slowly, however, for fast
-      moving objects, the Heirarchical LK performs better
+      the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
+      however, for objects with more displacement, the Heirarchical LK performs better
     .</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -140,13 +133,13 @@ These measures are then combined to create a weight map used to blend each of th
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Hyperparameters : Deep Neural Networks </h3>
+    <h3> Deep Neural Networks: Hyperparameters </h3>
     <ul>
       <li> Python, Keras, NumPy </li>
     </ul>
     <p> Hyperparameters are very important for optimum performance of Deep learning models.
       These include: number of layers, number of units, dropout, momentum, epochs, batch-size, learning-rate.
-      This work explores different values of these parameters and the corresponding performance of an MNIST-DNN model.
+      This work explores different values of these parameters and the corresponding performance on an MNIST-DNN model.
     </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -161,24 +154,10 @@ These measures are then combined to create a weight map used to blend each of th
     <ul>
       <li> Matlab, Python, CNN </li>
     </ul>
-    <p> A computer vision algorithm is designed to find and counts sea lions from aerial images
-      while also categorizing found sea lions to classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
-      First, a high-resolution aerial image is cut into smaller images. Next, patches extracted from the smaller images are used to 
-      train a convolutional neural network for classification</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Implementing YOLO Object detection algorithm </h3>
-    <ul>
-      <li> Python, Keras </li>
-    </ul>
-    <p>This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <p> A computer vision algorithm is designed to classify sea lions from aerial images
+      into the classes: adult males, sub adult males, adult females, juveniles and pup respectively. 
+      First, a high-resolution aerial image is cut into smaller images. Next, feature points are used to 
+      extract training samples for a Convolutional Neural Network</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -219,29 +198,13 @@ These measures are then combined to create a weight map used to blend each of th
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Nonlinear Backstepping Control of Induction Motor </h3>
-    <ul>
-      <li> Matlab, Simulink, Lyapunov Backstepping </li>
-    </ul>
-    <p>Lyapunov based based backstepping controller was developed to control an induction motor</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
     <h3> LMS-based Adaptive Active Disturbance rejection Controller </h3>
     <ul>
       <li> Matlab, LMS, ADRC, ESO </li>
     </ul>
-    <p>the altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
-    Due to persistent aerodynamic disturbances, the control of a quadrotor unit is cumbersome; especially, the ground wake
-     effect which comes into play during landing. In this work, an Adaptive Active disturbance rejection control (AADRC)
-      is proposed to compensate for undesirable effects resulting in smoother control. The adaptation of the ADRC controller
-       is governed by an LMS algorithm on the extended state observer (ESO).</p>
+    <p>The altitude control of a quadrotor unmanned aerial vehicle is treated using its altitude dynamics in hover mode. 
+     An LMS-based Adaptive Active disturbance rejection control (AADRC) is proposed to compensate for undesirable effects resulting 
+      in smoother control.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -257,10 +220,7 @@ These measures are then combined to create a weight map used to blend each of th
     </ul>
     <p> Backstepping and Proportional-Derivative (PD) methods was used for the control of a quadrotor
     unit and subsequently proposed for autonomous tracking of an endangered species; the ’Northern white rhino’. Extended Kalman
-    Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve using a single collar sensor on
-    the animal while a case of partial sensing was presented for energy saving considerations. The localization system sends the
-    rhino’s position trajectories to the quadrotor control system for tracking. This system has the potential to aid rangers, enhance
-    surveillance, deter poachers and consequently help preserve endangered wildlife.</p>
+    Filter (EKF) estimation was applied for the localization of the rhino in a virtual wildlife reserve.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -341,8 +301,7 @@ These measures are then combined to create a weight map used to blend each of th
     </ul>
     <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
       Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
-      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
-      Seam carving algorithm performs well in preserving image content during resizing.</p>
+      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
@@ -356,10 +315,8 @@ These measures are then combined to create a weight map used to blend each of th
     <ul>
       <li> Hardware, Radio Frequency, 2G/3G, VCXO </li>
     </ul>
-    <p>Reproducing the paper content-aware image resizing presented by Shai-Avidan and Ariel Shamir. 
-      Using the seam carving algorithm, three images are subject to: (1) aspect ratio change by seam removal, 
-      (b) aspect ratio change by seam insertion, and (c) aspect ratio change by optimal retargeting. 
-      Seam carving algorithm performs well in preserving image content during resizing.</p>
+    <p>Extrinsic noise is everywhere. Using a microphone and a Voltage controlled crystall oscillator,
+      an RF circuit was built to jam cellular communications at the GSM band using destructive interference.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
