--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,11 +4,12 @@
 </div>
 
    <div class="user">
-   <p> I'm interested in the intersection of Robotics and Artificial Intelligence:
-       My expertise and experience range from Computer Vision, Machine Learning,
-       Deep Learning, Control Theory, Signal Processing, Oil&Gas Material Integrity research,
-       Advanced Dynamics. In my spare time, I do sports, video games, and like to explore
-       open research problems.</p>
+   <p> I’m a Robotics enthusiast. From Unmanned vehicles to Robotic surgery to Smart Vision Systems, 
+    I have passion for every system that can sense, think, and act on its own.
+    My experience ranges from Signals and Communications (B.Eng), Systems, Robotics and Control theory (M.Sc), 
+    and currently, a Machine learning specialization (2nd M.Sc). I’ve had the opportunity to work with 
+    Ultrasonic and EMAT technologies for Oil and Gas In-line inspection. Similarly, I
+    have experience in the communcations industry and once helped develop software for a medical facility..</p>
    </div>
 
    <div class="user">
@@ -17,7 +18,7 @@
       <h2>Code</h2>
       <i class="devicon-python-plain"></i>
       <i class="devicon-cplusplus-plain"></i>
-      <p>Python, C++, MATLAB</p>
+      <p>Python, MATLAB, C++</p>
     </div>
     
     <div class="tech">
@@ -25,7 +26,7 @@
       <i class="devicon-git-plain"></i>
       <i class="devicon-github-plain"></i>
       <i class="devicon-linux-plain"></i>
-      <p>ROS, GIT, Tensorflow, Keras, PyTorch</p>
+      <p>NumPy, OpenCV, ROS, GIT, Keras</p>
     </div>
    
     <div class="tech">
