--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -167,7 +167,7 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Generation Yoruba names using Closed-Loop RNN </h3>
+    <h3> Generating Yoruba names using RNN with Model feedback </h3>
     <ul>
       <li> RNN, ML, Sequence-to-Sequency learning, NLP </li>
     </ul>
@@ -183,9 +183,25 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
+    <h3> Active Disturbance Rejection Controller for Quadrotor </h3>
+    <ul>
+      <li> Matlab, Simulink, S-Functions </li>
+    </ul>
+    <p>ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
+      (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
     <h3> Dinasour name generation using RNN </h3>
     <ul>
-      <li> RNN, ML, Sequence-to-Sequence leanring, NLP </li>
+      <li> RNN, ML, Sequence-to-Sequence learning, NLP </li>
     </ul>
     <p>Reccurent Neural Networks (RNN) are excellent for sequence-to-sequence learning.
     In this project cool, they are used to generate names for Dinosaurs.</p>
@@ -326,20 +342,6 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Basic Image Processing Routines </h3>
-    <ul>
-      <li> Matlab </li>
-    </ul>
-    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
     <h3> Quadrotor Simulation with VREP </h3>
     <ul>
       <li> Lua, VREP </li>
@@ -366,17 +368,17 @@
   </div>
 </div>
 
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Active Disturbance Rejection Controller for Quadrotor </h3>
+    <h3> Basic Image Processing Routines </h3>
     <ul>
-      <li> Matlab, Simulink, S-Functions </li>
+      <li> Matlab </li>
     </ul>
-    <p>ADRC is an interesting controller that uses and Extended state observer to linearize the Quadrotor's Nonlinear dynamics 
-      (similar to Feedback linearization). This makes it capable of eliminating disturbances (robustness). </p>
+    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
