--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,16 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="kbmajeed1@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/kbmajeed/"><i class="fab fa-linkedin"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="#blog" data-scroll>Blog</a>
-        <a class="link" href="#cv" data-scroll>CV</a>
+        <a class="link" href="https://github.com/kbmajeed/BlogPosts" data-scroll>Blog</a>
+        <a class="link" href="https://github.com/kbmajeed/KbmajeedCV19/blob/master/Kbmajeed_CV_2019.pdf" data-scroll>CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
