--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="github.com/kbmajeed/BlogPosts">Blog</a>
-        <a class="link" href="github.com/kbmajeed/KbmajeedCV19/blob/master/Kbmajeed_CV_2019.pdf">CV</a>
+        <a class="link" href="BlogPosts">Blog</a>
+        <a class="link" href="KbmajeedCV19/blob/master/Kbmajeed_CV_2019.pdf">CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
