--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,14 @@
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:kbmajeed1@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="linkedin.com/in/kbmajeed/"><i class="fab fa-linkedin-in"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="linkedin.com/in/kbmajeed/"><i class="fa fa-linkedin-in"></i></a>
         <a aria-label="My Github" target="_blank" href="github.com/kbmajeed"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="BlogPosts">Blog</a>
-        <a class="link" href="KbmajeedCV19/blob/master/Kbmajeed_CV_2019.pdf">CV</a>
+        <a class="link" href="https://kbmajeed.github.io/BlogPosts/">Blog</a>
+        <a class="link" href="https://kbmajeed.github.io/KbmajeedCV19/">CV</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
