--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,6 +49,21 @@
   </div>
 </div>
 
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Implementing YOLO Object detection algorithm </h3>
+    <ul>
+      <li> Python, Keras </li>
+    </ul>
+    <p>This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
@@ -107,7 +122,7 @@
     <p> Face detection was performed as described in the Viola-Jonespaper. Haar features create
       representations for human faces while Boosting enhances the performance of the learner 
       by concentrating on difficult samples.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -124,7 +139,7 @@
       the least squares solution of the Optical flow equations. It is assumed that objects move slowly, 
       however, for objects with more displacement, the Heirarchical LK performs better
     .</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -254,7 +269,7 @@
     It involves three main steps: Calibration, Radiance Map, and Tone Mapping. The Camera response curve 
     is calculated in the first step, followed by a the computation of radiance map. Finally, correction
      of the color tones in the image is performed. </p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
@@ -270,7 +285,7 @@
     <p>Video textures are created through 3 steps. First is computing a similarity metric.
     Second is to compute the transition difference. Third involves finding and synthesizing
     recurrent loops</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+    <a class="project-link" href="https://kbmajeed.github.io/HiddenFiles/">Check it out</a>
   </div>
 </div>
 
