--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -49,17 +49,16 @@
   </div>
 </div>
 
-
 <div class="user-projects">
   <div class="images-right">
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Implementing YOLO Object detection algorithm </h3>
+    <h3> YOLO for Object Detection </h3>
     <ul>
       <li> Python, Keras </li>
     </ul>
-    <p>This work is based on the implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
+    <p> This is an implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
