--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -54,20 +54,6 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> YOLO for Object Detection </h3>
-    <ul>
-      <li> Python, Keras </li>
-    </ul>
-    <p> This is an implementation of the YOLO (You-only-look-once) algorithm for object detection.</p>
-    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
-  </div>
-</div>
-
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
     <h3> Pedestrian Tracking and Detection </h3>
     <ul>
       <li> Python, OpenCV </li>
@@ -381,6 +367,22 @@
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
 </div>
+
+
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> YOLO for Object Detection </h3>
+    <ul>
+      <li> Matlab </li>
+    </ul>
+    <p>Basic algorithms in Image processing. Using Matlab code to explore different Edge detection algorithms and parameters.</p>
+    <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
+  </div>
+</div>
+
 
 
 <div class="user-projects">
