--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,7 @@
     <ul>
       <li> Python, OpenCV </li>
     </ul>
-    <p> This project involves Augmented reality without the use of markers. An image of an advert & video 
+    <p> align="justify" This project involves Augmented reality without the use of markers. An image of an advert & video 
       can be projected on a surface by persistently tracking homographies as proposed by Andrew Zisserman et al.</p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
   </div>
@@ -27,7 +27,7 @@
     <ul>
       <li> Python, OpenCV, Numpy </li>
     </ul>
-    <p>Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
+    <p> align="justify" Exposure fusion is a technique that creates a single image with optimal detail from a set of multi-exposed images. 
         As developed by Tom Mertens et al., the proposed algorithm computes relevant quality measures; Contrast, Saturation, and Well-Exposedness.  
       These measures are then combined to create a weight map used to blend each of the multi-exposed images to a single image with best exposure. </p>
     <a class="project-link" href="https://github.com/kbmajeed/SeaLionVision">Check it out</a>
